--- a/property-access-microservice-dev.properties
+++ b/property-access-microservice-dev.properties
@@ -1,2 +1,2 @@
-property-file.name=DEV
-property-file.discription=This is DEV environment
+property-access-microservice.name=DEV
+property-access-microservice.discription=This is DEV environment
