--- a/property-access-microservice-qa.properties
+++ b/property-access-microservice-qa.properties
@@ -1,2 +1,2 @@
-property-file.name=QA
-property-file.discription=This is QA environment
+property-access-microservice.name=QA
+property-access-microservice.discription=This is QA environment
