--- a/property-access-microservice.properties
+++ b/property-access-microservice.properties
@@ -1,2 +1,2 @@
-property-file.name=default
-property-file.discription=This is default environment
+property-access-microservice.name=default
+property-access-microservice.discription=This is default environment
